--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -104,6 +104,10 @@ input[type="reset"],
             display: none;
         }
 
+        #nav .fa-home {
+            display: none
+        }
+
 /*********************************************************************************/
 /* Panels                                                                        */
 /*********************************************************************************/
