--- a/css/style-desktop.css
+++ b/css/style-desktop.css
@@ -279,19 +279,12 @@ input[type="reset"],
     }
 
         #me header > h1 {
-            position: absolute;
-            left: 0;
-            bottom: 52.5%;
-            margin: 0;
+            margin-top: 2.5em;
         }
 
         #me header > p {
-            position: absolute;
-            left: 0;
-            top: 52.5%;
             font-size: 1.5em;
             letter-spacing: -0.015em;
-            margin-top: 0;
         }
 
 /*********************************************************************************/
